--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,12 @@ twitter_username: GildasQ
 github_username:  gquemener
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
 
 minima:
-  skin: dark
+  skin: auto
 
 # Exclude from processing.
 # The following items will not be processed, by default.
