--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ minima:
   skin: auto
   social_links:
     - { platform: github, user_url: "https://github.com/gquemener" }
-    - { platform: twitter, user_url: "https://github.com/GildasQ" }
+    - { platform: twitter, user_url: "https://twitter.com/GildasQ" }
 
 # Exclude from processing.
 # The following items will not be processed, by default.
